# iced-wgpu-embed

./: Cargo.toml  README.md
examples/counter/: Cargo.toml  README.md
examples/counter/android/: NativeBridge.kt
examples/counter/ios/: CounterView.swift
examples/counter/src/: lib.rs
src/: diagnostics.rs  lib.rs  notifier.rs  program.rs  redraw_flag.rs  surface.rs  touch.rs  viewport.rs
