[package]
name = "iced-wgpu-embed"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Embed iced+wgpu views into native iOS/Android/desktop view hierarchies"
repository = "https://github.com/mz2/iced-wgpu-embed"

[dependencies]
# iced sub-crates for headless/integration rendering (bypassing winit)
iced_wgpu = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_runtime = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["wgpu"] }
# Embed Fira Sans font (platforms without system font paths for cosmic-text)
iced_graphics = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["fira-sans"] }

# wgpu for surface/adapter/device types
wgpu = "24"

# Async runtime for wgpu adapter/device requests
pollster = "0.4"

# Logging
log = "0.4"
